Chapter4/configmapAndSecret/deploymentRefconf.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp-db-deploy
  namespace: shared-config
spec:
  selector:
    matchLables:
      app: myapp-db 
  template: 
    metadata: 
      labels: 
        app: myapp-db
spec:
  containers:
  - name: myapp-db-instance
    image: mysql 
    resources: 
      limits:
        memory: "256Mi"
        cpu: "500m"
    ports:
      - containerPort: 3306
