Chapter4/configmapAndSecret/nginxInternalNetwork.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-svc
  namespace: shared-config
spec:
  selector:
    app: nginx-custom
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
