Chapter4/configmapAndSecret/nginxIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-custom-ingress
  namespace: shared-config
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: chapter4.nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-custom-svc
                port:
                  number: 80
